--- a/index_browse.html
+++ b/index_browse.html
@@ -178,8 +178,8 @@
 
 /*MENU*/
    .taghead { font-weight:900; padding:5px; }
-   #topper { height:100px; background-color:#000000; color:#ffffff; position:relative; background: url('../img/topper.png') no-repeat center; }
-   .slideout { position: absolute; top:0; right:0; border: none; outline:none; background: url('../img/menu.png') no-repeat center; width: 50px; height: 50px; }
+   #topper { height:100px; background-color:#000000; color:#ffffff; position:relative; background: url('http://freyhargarten.com/_base/img/topper.png') no-repeat center; }
+   .slideout { position: absolute; top:0; right:0; border: none; outline:none; background: url('http://freyhargarten.com/_base/img/menu.png') no-repeat center; width: 50px; height: 50px; }
    .side { display:inline-block; }
    #menu { display:none; }
    .slideout:hover { cursor:pointer; }
