--- a/index_browse.html
+++ b/index_browse.html
@@ -307,7 +307,7 @@
 
 <div class="siteNav"><a href="https://www.mixcloud.com/jeff-hargarten/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/mixcloud.png" alt="mixcloud" /></a> <a href="https://www.vimeo.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/vimeo.png" alt="vimeo" /></a> <a href="https://giphy.com/channel/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/giphy.png" alt="giphy" /></a></div>
 
-<a href="http://portalmancy.com"><div class="this purple">Artwork</div></a>
+<a href="http://portalmancy.com"><div class="purple">Artwork</div></a>
 
 <div class="siteNav"><a href="http://jeffhargarten.deviantart.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/deviantart.png" alt="deviantart" /></a> <a href="http://jeffhargarten.tumblr.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/tumblr.png" alt="tumblr" /></a> <a href="https://soundcloud.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/soundcloud.png" alt="soundcloud" /></a></div>
 
