--- a/index_browse.html
+++ b/index_browse.html
@@ -688,7 +688,7 @@ $(document).ready(function () {
     $(".icon").click(function () {
         $(".socialBox").hide();
         $(".icon").removeClass('selected');
-        window.history.replaceState(null, null, 'startribune_dataviz/index_browse.html?page=' + $(this).attr("data"));
+        window.history.replaceState(null, null, '?page=' + $(this).attr("data"));
         $(this).parent().addClass('selected');
         $("#" + $(this).attr("data")).fadeToggle(200);
     });
