--- a/index_browse.html
+++ b/index_browse.html
@@ -101,8 +101,6 @@
       .linkSelect { background-color:#ddd !important; }
 
 /*DROPDOWN*/
-/*      *, *:after, *:before { box-sizing:border-box; margin:0; moz-box-sizing:border-box; padding:0; webkit-box-sizing:border-box; }
-      ::-moz-selection { background:transparent; }*/
       .wrapper-demo { font-weight:400; zoom:1; z-index:999; display:inline-block; width:100%; }
       .wrapper-demo:after { clear:both; content:""; display:table; }
       .wrapper-dropdown-1 { display:inline-block;font-family:"Benton Sans",Helvetica,Arial,sans-serif;z-index:900;background:#ddd;color:#333;cursor:pointer;font-weight:bold;outline:none;padding:8px;position:relative;width:200px;border:1px solid #aaa;box-shadow:0 2px 1px rgba(0, 0, 0, 0.10);font-size:14px; width:100%; }
@@ -115,7 +113,7 @@
       .wrapper-dropdown-1.active .dropdown { opacity:1; pointer-events:auto; }
       .wrapper-dropdown-1.active:after { border-color:#333 transparent; border-width:6px 6px 0 6px; margin-top:-3px; }
       .wrapper-dropdown-1.active { background:#ddd; background:linear-gradient(to right, #ddd 0%,#ddd 78%,#ffffff 78%,#ffffff 100%); background:-moz-linear-gradient(left, #9bc7de 0%, #9bc7de 78%, #ffffff 78%, #ffffff 100%); background:-ms-linear-gradient(left, #ddd 0%,#ddd 78%,#ffffff 78%,#ffffff 100%); background:-o-linear-gradient(left, #ddd 0%,#ddd 78%,#ffffff 78%,#ffffff 100%); background:-webkit-gradient(linear, left top, right top, color-stop(0%,#ddd), color-stop(78%,#ddd), color-stop(78%,#ffffff), color-stop(100%,#ffffff)); background:-webkit-linear-gradient(left, #ddd 0%,#ddd 78%,#ffffff 78%,#ffffff 100%); filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#9bc7de', endColorstr='#ffffff',GradientType=1 ); }
-      ul.dropdown.months { box-sizing:border-box;margin:0;moz-box-sizing:border-box;padding:0;webkit-box-sizing:border-box;margin-top:-1px;border-radius:0 0 4px 4px;background-clip:padding-box; }
+      ul.dropdown.months { border-box;margin:0;border-box;padding:0;border-box;margin-top:-1px;border-radius:0 0 4px 4px;background-clip:padding-box; }
       .no-opacity .wrapper-dropdown-1 .dropdown,
       .no-pointerevents .wrapper-dropdown-1 .dropdown { display:none; opacity:1; pointer-events:auto; }
       .no-opacity .wrapper-dropdown-1.active .dropdown,
@@ -124,7 +122,7 @@
       .wrapper-dropdown { width:100% !important; }
       .wrapper-dropdown-1 { display:inline-block;font-family:"Benton Sans",Helvetica,Arial,sans-serif;z-index:900;background:#ddd;color:#333;cursor:pointer;font-weight:bold;outline:none;padding:8px;position:relative; border:1px solid #aaa;box-shadow:0 2px 1px rgba(0, 0, 0, 0.10);font-size:14px; width:100%; margin-right:auto; margin-left:auto; }
       .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important; }
-      ul.dropdown.months { box-sizing:border-box;margin:0;moz-box-sizing:border-box;padding:0;webkit-box-sizing:border-box;margin-top:-1px;border-radius:0 0 4px 4px;background-clip:padding-box; }
+      ul.dropdown.months { border-box;margin:0;border-box;padding:0;border-box;margin-top:-1px;border-radius:0 0 4px 4px;background-clip:padding-box; }
       .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important; }
       .wrapper-dropdown-1 .dropdown li:hover a { background:#EFEFEF; }
       header[role="banner"] { width:100%;height:40px;z-index:1000;background:#f0f0f0; }
@@ -155,19 +153,19 @@
 
 /*COLORS*/
     .blue {
-        border-bottom:5px solid #3580A3 !important;
+        border-bottom:5px solid #3a6798 !important;
     }
     .green {
-        border-bottom:5px solid #5BBF48 !important;
+        border-bottom:5px solid #87C944 !important;
     }
     .red {
-        border-bottom:5px solid #C22A22 !important;
+        border-bottom:5px solid #AA3939 !important;
     }
     .purple {
-        border-bottom:5px solid #857AAA !important;
+        border-bottom:5px solid #7F587C !important;
     }
     .gray {
-        border-bottom:5px solid #CCC !important;
+        border-bottom:5px solid #888888 !important;
     }
     .gold {
         border-bottom:5px solid #F2D2A4 !important;
@@ -233,7 +231,7 @@
       .nav-utility-mod { height:50px; }
       .nav-utility-inner-right { float: right !important;  width:auto !important}
       .nav-utility-inner-center { float:right !important; text-align: right; width:auto !important; margin-top:10px !important; }
-      .nav-utility-mod { width:100% !important; min-width:auto !important; max-width:auto!important; float:left !important; border-bottom: 1px solid #000; }
+      .nav-utility-mod { width:100% !important; min-width:auto !important; max-width:auto !important; float:left !important; border-bottom: 1px solid #000; }
       .nav-branding-mod {/* margin-top:0 !important;*/ display:none !important; }
       .nav-utility-inner { width:auto; }
       .nav-utility-inner .btn-subscribe { display:none !important; }
@@ -336,9 +334,9 @@
 <div id="sidebar">
 
 <div class="icon sort-link selected articles" id="allProjects_m" data="startribune"><img src="img/striblab.png" alt="striblab" /></div>
-<div class="icon sort-link" id="twitter" data="tweets"><img src="img/twitter.png" alt="twitter" /></div>
+<div class="icon sort-link" id="twitter" data="twitter"><img src="img/twitter.png" alt="twitter" /></div>
 <div class="icon sort-link" id="resources" data="resourceList"><img src="img/tools.png" alt="tools" /></div>
-<div class="icon sort-link" id="tools" data="toolbox"><img src="img/code.png" alt="code" /></div>
+<div class="icon sort-link" id="tool" data="tools"><img src="img/code.png" alt="code" /></div>
 <div class="icon github" data="git"><a class="icon sort-link" href="https://github.com/striblab"><img data="github" src="img/github.png" alt="github" /></a></div>
 
 </div>
@@ -359,7 +357,7 @@
           <div id="dd" class="wrapper-dropdown-1" tabindex="1">
             <span>All Projects</span>
               <ul class="dropdown months" tabindex="1">
-              <li class="sort-link" id="allProjects_m"><strong>All Projects <span class='dash'>-</span> </strong><div class="count"><strong>0</strong></div></li>
+              <li class="sort-link" id="allProjects"><strong>All Projects <span class='dash'>-</span> </strong><div class="count"><strong>0</strong></div></li>
               <li class="sort-link" id="economics">Business and Economics <span class='dash'>-</span> <div class="count">0</div></li>
               <li class="sort-link" id="crime">Criminal Justice <span class='dash'>-</span> <div class="count">0</div></li>
               <li class="sort-link" id="demographics">Demographics <span class='dash'>-</span> <div class="count">0</div></li>
