--- a/20160218-adverse_events/builds/development/index.html
+++ b/20160218-adverse_events/builds/development/index.html
@@ -16,6 +16,10 @@
 <body>
 <div id="wrapper">
 
+<div class="chartTitle">Hospital adverse events increase</div>
+<div class="chatter">Harmful <span class="legendary blue4">adverse events</span> in surgery and patient care continue to occur in Minnesota hospitals and surgery centers, despite more than a decade of efforts to publicly report and prevent them.</div>
+<div id="chartTrend"></div>
+
 <div class="chartTitle">Hospitals with 6+ adverse events in 2017</div>
 <div class="chatter">Data spans 12-month period ending Oct. 6, 2017.</div>
 <div id="chart"></div>
@@ -34,8 +38,6 @@
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
 <script src="js/d3.v3.min.js"></script>
-<script src="js/datatables.min.js"></script>
-<script src="js/datatables.responsive.js"></script>
 <script src="js/c3.min.js"></script> 
 
 <script src="js/script.js"></script>
