--- a/20160218-adverse_events/builds/development/index.html
+++ b/20160218-adverse_events/builds/development/index.html
@@ -21,7 +21,7 @@
 <div id="chartTrend"></div>
 
 <div class="chartTitle">Hospitals with 6+ adverse events in 2017</div>
-<div class="chatter">Data spans 12-month period ending Oct. 6, 2017.</div>
+<div class="chatter">Data spans 12-month period ending Oct. 6, 2017. Hospitals with more <span class="legendary blue4">adverse events</span> are often larger and see more patients.</div>
 <div id="chart"></div>
 
 <div class="chartTitle">Search the state’s database by hospital or by adverse event</div>
