--- a/index_browse.html
+++ b/index_browse.html
@@ -319,7 +319,7 @@
 
 <a href="http://jeffhargarten.github.io/about"><div class="orange">About</div></a>
 
-<div class="siteNav"><a href="#" target="new_"><img src="http://freyhargarten.com/_base/img/icons/tinder.png" alt="tinder" /></a> <a href="http://jeffhargarten.tumblr.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/league.png" alt="league" /></a> <a href="#" target="new_"><img src="http://freyhargarten.com/_base/img/icons/bumble.png" alt="bumble" /></a></div>
+<!-- <div class="siteNav"><a href="#" target="new_"><img src="http://freyhargarten.com/_base/img/icons/tinder.png" alt="tinder" /></a> <a href="http://jeffhargarten.tumblr.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/league.png" alt="league" /></a> <a href="#" target="new_"><img src="http://freyhargarten.com/_base/img/icons/bumble.png" alt="bumble" /></a></div> -->
 </div>
 
 <div id="intro" class="section">
