--- a/20180408-stripzone/pages/_main-index.ejs.html
+++ b/20180408-stripzone/pages/_main-index.ejs.html
@@ -14,7 +14,7 @@
 			<div class="legendary" style="background-color:#c97b7c;">Allowed Zone</div>
 			<div class="legendary red4" style="border:3px solid #9C0004;">Licensed Business</div>
 	    </div>
-    	<div class="byline">Source: City of Minneapolis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a><!--  | <a href="./data/maindata.xlsx" target="new_">Download Data</a> --></div>
+    	<div class="byline">Source: City of Minneapolis, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a><!--  | <a href="./data/maindata.xlsx" target="new_">Download Data</a> --></div>
 	</div>
 </div>
 </div>
