--- a/20171022-bikelanes/builds/development/index.html
+++ b/20171022-bikelanes/builds/development/index.html
@@ -22,7 +22,7 @@
 
 <div id="mapMPLS" class="map"></div>
 
-<div class="byline">Source: City of Minneapolis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+<div class="byline">Source: City of Minneapolis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
 
 
@@ -32,7 +32,7 @@
 
 <div id="mapSTP" class="map"></div>
 
-<div class="byline">Source: City of St. Paul | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+<div class="byline">Source: City of St. Paul | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
 
 <div id="change" class="slide">
@@ -41,7 +41,7 @@
 
 <div id="chartChange" class="chart"></div>
 
-<div class="byline">Source: City of Minneapolis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+<div class="byline">Source: City of Minneapolis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
 
 </div>
